--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ button {
     display: flex;
     justify-content: center;
     text-align: center;
-    margin-top: 40px;
+    margin-top: 30px;
     margin-left: 600px;
     width: 175px;
     height: 40px;
@@ -101,7 +101,7 @@ button:hover {
 .result-text{
    
     font-size: 60px;
-   color: 		#228B22;
+   color:	#DCDCDC;
     display: flex;
     justify-content: center;
     margin-left: 90px;
