--- a/style.css
+++ b/style.css
@@ -2,10 +2,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
     font-family: 'Roboto', sans-serif;
 }
-
 
 
 h1 {
@@ -13,23 +11,25 @@ h1 {
     justify-content: center;
     margin-top: 130px;
     font-size: 80px;
-    color: #fff
+    color: #fff;
 }
 
-.roleta {
-    width: 110%;
-    height: 200%;
-        position: fixed;
-    margin-top: -130px;
-    margin-left: -30px;
-    z-index: -1;
+    body {
+        background-image: url("https://img.freepik.com/fotos-premium/roda-de-roleta-de-cassino-conceito-de-jogo-de-cassino-mesa-de-roleta-em-um-cassino-closeup-de-roleta-de-cassino_653511-67.jpg?w=740");
     background-size: cover;
-}
-
+    background-position: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: -1;
+    }
+    
 p {
     display: flex;
     justify-content: center;
-    margin-top: 40px;
+    margin-top: 25px;
     color: #fff;
     font-size: 40px;
     font-weight: 400;
@@ -49,8 +49,6 @@ p {
     padding: 10px;
     background: #DCDCDC;
     opacity: 0.8;
-
-
 }
 
 .input-max {
@@ -99,11 +97,11 @@ button:hover {
 }
 
 .result-text{
-   
     font-size: 60px;
-   color:	#DCDCDC;
+   color:  rgb(0, 136, 0);
     display: flex;
     justify-content: center;
     margin-left: 90px;
     margin-top: 5px;
 }
+
