--- a/style.css
+++ b/style.css
@@ -98,10 +98,43 @@ button:hover {
 
 .result-text{
     font-size: 60px;
-   color:  rgb(0, 136, 0);
+   color: #000000;
     display: flex;
     justify-content: center;
     margin-left: 90px;
     margin-top: 5px;
 }
 
+@media (max-width: 768px) {
+    h1{
+        font-size: 60px;
+    }
+
+    p{
+        font-size: 30px;
+    }
+
+    input{
+        width: 100%;
+        margin-bottom: 10px;
+    }
+    .input-min{
+        margin-left: 0px;
+    }
+    .input-max{
+        margin-left: 280px;
+        margin-top: -45px;
+    }
+    button{
+        font-size: 20px;
+        margin-top: 120px;
+        margin-left: 120px;
+    }
+    .result-text{
+        font-size: 30px;
+        text-align: left;
+        margin-left: 0;
+
+    }
+
+}
